--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "gimiman",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "main": "main.js",
+  "author": "knifoon",
+  "description": "gimi manager",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,5 +21,27 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "electron": "^23.1.3",
     "vite": "^4.1.4"
+  },
+  "build": {
+    "productName": "GIMM",
+    "appId": "com.knifoon|electron.gimm",
+    "directories": {
+        "output": "out"
+    },
+    "win": {
+        "target": [
+            "nsis",
+            "msi"
+        ]
+    },
+    "linux": {
+        "target": [
+            "deb",
+            "rpm",
+            "snap",
+            "AppImage"
+        ]
+    }
   }
+
 }
