added portable windows build option

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "win": {
         "target": [
             "nsis",
-            "msi"
+            "msi",
+            "portable"
         ]
     },
     "linux": {
