--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "e:start": "electron ."
+    "e:start": "electron .",
+    "e:build": "electron-builder"
   },
   "dependencies": {
     "electron-store": "^8.1.0",
@@ -20,29 +21,29 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "electron": "^23.1.3",
+    "electron-builder": "^23.6.0",
     "vite": "^4.1.4"
   },
   "build": {
     "productName": "GIMM",
     "appId": "com.knifoon|electron.gimm",
     "directories": {
-        "output": "out"
+      "output": "out"
     },
     "win": {
-        "target": [
-            "nsis",
-            "msi",
-            "portable"
-        ]
+      "target": [
+        "nsis",
+        "msi",
+        "portable"
+      ]
     },
     "linux": {
-        "target": [
-            "deb",
-            "rpm",
-            "snap",
-            "AppImage"
-        ]
+      "target": [
+        "deb",
+        "rpm",
+        "snap",
+        "AppImage"
+      ]
     }
   }
-
 }
