--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
+    "electron-log": "^5.0.0-beta.19",
     "electron-store": "^8.1.0",
     "marked": "^4.2.12",
     "pinia": "^2.0.32",
