--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "make": "electron-builder -w --x64"
   },
   "dependencies": {
+    "@vueuse/components": "^9.13.0",
+    "@vueuse/core": "^9.13.0",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^5.0.0-beta.19",
     "electron-store": "^8.1.0",
